# atwa

./: .envrc  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
.claude/hooks/: check.sh  test_related.sh
.claude/rules/: logging-boundaries.md
.claude/skills/spec-handoff/: SKILL.md
.claude/skills/spec-handoff-v2/: SKILL.md
.github/workflows/: ci.yml
config/: __init__.py  default.toml  development.toml  loader.py  paths.py  production.toml  test.toml
daemon/: __init__.py  attention_tracker.py  capture.py  event_parser.py  main.py  session_tracker.py  tmux_discovery.py  utils.py
db/: __init__.py  engine.py  models.py
docs/: 01_概览与架构.md  02_多环境配置.md  07_运行时信息与开发规范.md
docs/handoff/: 2026-04-data-model.md  2026-04-multi-env-config.md  2026-04-perception-layer.md  2026-04-server-and-frontend.md
docs/integration/: 01_集成测试_感知层.md  02_集成测试_服务层.md  03_E2E测试_Dashboard与Card.md  04_E2E测试_编辑与输入.md  05_E2E测试_实时与异常.md  06_测试数据与排查指引.md
docs/requirement/: 03_数据模型.md  04_Phase1_感知层.md  05_Phase1_服务层与前端.md  06_Phase2与Phase3.md
docs/specs/: data-model.md  multi-env-config.md  perception-layer.md  server-and-frontend.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/api/: client.ts
frontend/src/components/: CustomInput.css  CustomInput.tsx  Dashboard.css  Dashboard.tsx  FilterBar.css  (+16 more)
migrations/: env.py
migrations/versions/: 001_initial_tables.py
scripts/: atwa-wrap  dev  update_claude_patterns.py
server/: __init__.py  dependencies.py  logging.py  main.py  runtime.py  schemas.py  ws.py
server/routers/: actions.py  insights.py  sessions.py
tests/: conftest.py  test_config.py  test_db.py
(+6 files in other folders)
