[project]
name = "atwa"
version = "0.1.0"
description = "AI Terminal Workflow Assistant"
requires-python = ">=3.11"
dependencies = [
    "libtmux>=0.28",
    "pyte>=0.8",
    "psutil>=5.9",
    "textdistance>=4.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
phase2 = [
    "fastembed>=0.3",
]
phase3 = [
    "anthropic>=0.25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
